@@ -46,13 +46,14 @@ else: useMathText = True
 
 Debug = False
 
-# ref gtk+/gtk/gtkwidget.h
-def GTK_WIDGET_DRAWABLE(w): flags = w.flags(); return flags & gtk.VISIBLE !=0 and flags & gtk.MAPPED != 0
-
-
 # the true dots per inch on the screen; should be display dependent
 # see http://groups.google.com/groups?q=screen+dpi+x11&hl=en&lr=&ie=UTF-8&oe=UTF-8&safe=off&selm=7077.26e81ad5%40swift.cs.tcd.ie&rnum=5 for some info about screen dpi
 PIXELS_PER_INCH = 96
+
+
+# Image formats that this backend supports - for FileChooser and print_figure()
+image_format_list         = ['eps', 'jpg', 'png', 'ps', 'svg']
+image_format_default      = 'png'
 
 
 cursord = {
@@ -61,6 +62,10 @@ cursord = {
     cursors.POINTER       : gtk.gdk.Cursor(gtk.gdk.LEFT_PTR),
     cursors.SELECT_REGION : gtk.gdk.Cursor(gtk.gdk.TCROSS),
     }
+
+# ref gtk+/gtk/gtkwidget.h
+def GTK_WIDGET_DRAWABLE(w): flags = w.flags(); return flags & gtk.VISIBLE !=0 and flags & gtk.MAPPED != 0
+
 
 class ColorManagerGTK:
     _cached = {}  # a map from get_color args to colors
@@ -636,7 +641,7 @@ class FigureCanvasGTK(gtk.DrawingArea, FigureCanvasBase):
                65514 : 'alt',
                }
 
-
+                          
     def __init__(self, figure):
         FigureCanvasBase.__init__(self, figure)
         gtk.DrawingArea.__init__(self)
@@ -796,46 +801,44 @@ class FigureCanvasGTK(gtk.DrawingArea, FigureCanvasBase):
         return True
 
 
-    def print_figure(self, filename, dpi=150, facecolor='w', edgecolor='w'):
-        # orientation='portrait'):
+    def print_figure(self, filename, dpi=150, facecolor='w', edgecolor='w',
+                     orientation='portrait'):
 
         if is_string_like(filename):
             isFileName = True
             root, ext = os.path.splitext(filename)        
             ext = ext.lower()[1:]
-            if not len(ext):
-                filename, ext = filename + '.png', 'png' # default format
+            if ext == '':
+                ext      = image_format_default
+                filename = filename + '.' + ext
 
-            extensions = {'png':'png', 'jpg':'jpeg', 'jpeg':'jpeg', 'ps':'ps', 'eps':'ps',
-                          'svg':'svg'}
-            try:
-                ftype = extensions[ext]
-            except KeyError:
-                error_msg_gtk('Extension "%s" is not supported. Available formats are SVG, PNG, JPEG, PS and EPS' % ext)
+            if ext not in image_format_list:
+                error_msg_gtk('Format "%s" is not supported.\nSupported formats are %s.' %
+                              (ext, ', '.join(image_format_list)))
                 return
         else:
-            isFileName = False  # could be a file?
-            ftype='png'
+            isFileName = False  # could be a file (or stdout)?
+            ext='png'
         
-        if not self._isRealized:  # no longer required?
+        if not self._isRealized:  # no longer required? for savefig() before window realized?
             self._printQued.append((filename, dpi, facecolor, edgecolor))
             return
 
-        if ftype == 'ps':
+        if ext in ('ps', 'eps'):
             from backend_ps import FigureCanvasPS
             origDPI = self.figure.dpi.get()
             ps = self.switch_backends(FigureCanvasPS)
             ps.figure.dpi.set(72)
-            ps.print_figure(filename, 72, facecolor, edgecolor)
+            ps.print_figure(filename, 72, facecolor, edgecolor, orientation)
             self.figure.dpi.set(origDPI)
             return
-        elif ftype == 'svg':
+        elif ext == 'svg':
             from backend_svg import FigureCanvasSVG
             origDPI = self.figure.dpi.get()
             svg = self.switch_backends(FigureCanvasSVG)
             svg.figure.dpi.set(72)
-            svg.print_figure(filename, 72, facecolor, edgecolor)
-            self.figure.dpi.set(origDPI)                        
+            svg.print_figure(filename, 72, facecolor, edgecolor, orientation)
+            self.figure.dpi.set(origDPI)
             return
 
         origDPI = self.figure.dpi.get()
@@ -863,13 +866,14 @@ class FigureCanvasGTK(gtk.DrawingArea, FigureCanvasBase):
         self.figure.dpi.set(origDPI)
 
         self.configure_event(self, 'configure') # a widget event in a print function? - sets fig size
-            
-        try: pixbuf.save(filename, ftype)
+
+        if ext == 'jpg': ext = 'jpeg' # pixbuf.save() only recognises this name
+        try: pixbuf.save(filename, ext)
         except gobject.GError, msg:
             msg = raise_msg_to_str(msg)
             # note the error must be displayed here because trapping
             # the error on a call or print_figure may not work because
-            # printing can be qued and called from realize
+            # printing can be queued and called from realize
             if isFileName:
                 error_msg_gtk('Could not save figure to %s\n\n%s' % (
                     filename, msg))
@@ -897,7 +901,6 @@ class FigureManagerGTK(FigureManagerBase):
         self.window = gtk.Window()
         self.window.set_title("Figure %d" % num)
 
-        #vbox = gtk.VBox(spacing=3)
         vbox = gtk.VBox()
         self.window.add(vbox)
         vbox.show()
@@ -1117,8 +1120,8 @@ class NavigationToolbar2GTK(NavigationToolbar2, gtk.Toolbar):
         self.show_all()
 
         self.fileselect = FileChooserDialog(title='Save the figure',
-                                            parent=None) # later - add parent
-        
+                                            parent=None,)  # later - add parent
+                                            
     
     def save_figure(self, button):
         fname = self.fileselect.get_filename_from_user()
@@ -1183,7 +1186,7 @@ class NavigationToolbar(gtk.Toolbar):
             self._create_toolitems_2_4()
             self.update = self._update_2_4
             self.fileselect = FileChooserDialog(title='Save the figure',
-                                                parent=self.win)
+                                                parent=self.win,) 
         else:
             self._create_toolitems_2_2()
             self.update = self._update_2_2
@@ -1441,23 +1444,72 @@ if gtk.pygtk_version >= (2,4,0):
                       buttons = (gtk.STOCK_CANCEL, gtk.RESPONSE_CANCEL,
                                  gtk.STOCK_SAVE,   gtk.RESPONSE_OK),
                       backend = '',
-                      path    = None):
+                      path    = None,
+                      ):
             super (FileChooserDialog, self).__init__ (title, parent, action,
                                                       buttons, backend)
+            self.set_default_response (gtk.RESPONSE_OK)
+
             if path: self.path = path
             else:    self.path = os.getcwd() + os.sep
 
-        def get_filename_from_user (self, path=None, title=None):
-            if path:  self.path = path
-            if title: self.set_title (title)
-            if self.path.endswith ('/'):
-                self.set_current_folder (self.path)
-            else:
-                self.set_filename (self.path)
+            self.image_format_list    = matplotlib.backends.backend_mod.image_format_list
+            self.image_format_default = matplotlib.backends.backend_mod.image_format_default
 
+            # create an extra widget to list supported image formats
+            self.set_current_folder (self.path)
+            self.set_current_name ('image.' + self.image_format_default)
+
+            hbox = gtk.HBox (spacing=10)
+            hbox.pack_start (gtk.Label ("Image Format:"), expand=False)
+            
+            self.cbox = gtk.combo_box_new_text()
+            hbox.pack_start (self.cbox)
+
+            for item in self.image_format_list:
+                self.cbox.append_text (item)
+            self.cbox.set_active (self.image_format_list.index (self.image_format_default))
+
+            def cb_cbox_changed (cbox, data=None):
+                """File extension changed"""
+                head, filename = os.path.split(self.get_filename())
+                root, ext = os.path.splitext(filename)
+                ext = ext[1:]
+                new_ext = self.image_format_list[cbox.get_active()]
+
+                if ext in self.image_format_list:
+                    filename = filename.replace(ext, new_ext)
+                elif ext == '':
+                    filename = filename.rstrip('.') + '.' + new_ext
+                    
+                self.set_current_name (filename)
+            self.cbox.connect ("changed", cb_cbox_changed)
+
+            hbox.show_all()
+            self.set_extra_widget(hbox)
+            
+
+        def get_filename_from_user (self):
             filename = None
-            if self.run() == gtk.RESPONSE_OK:
-                self.path = filename = self.get_filename()
+            while True:
+                if self.run() != gtk.RESPONSE_OK:
+                    filename = None
+                    break
+                filename = self.get_filename()
+                menu_ext  = self.image_format_list[self.cbox.get_active()]
+                root, ext = os.path.splitext(filename)
+                ext = ext[1:]
+                if ext == '':
+                    ext = menu_ext
+                    filename += '.' + ext
+
+                if ext in self.image_format_list:
+                    self.path = filename
+                    break
+                else:
+                    error_msg_gtk('Image format "%s" is not supported' % ext)
+                    self.set_current_name(os.path.split(root)[1] + '.' + menu_ext)
+                    
             self.hide()
             return filename
 
